--- a/glazewm/config.yaml
+++ b/glazewm/config.yaml
@@ -55,7 +55,7 @@ window_effects:
     # ** Exclusive to Windows 11 due to API limitations.
     border:
       enabled: true
-      color: "#8dbcff"
+      color: "#cba6f7"
 
     # Remove the title bar from the window's frame. Note that this can
     # cause rendering issues for some applications.
@@ -107,10 +107,13 @@ window_behavior:
 workspaces:
   - name: "1"
     bind_to_monitor: 1
+    keep_alive: true
   - name: "2"
     bind_to_monitor: 1
+    keep_alive: true
   - name: "3"
     bind_to_monitor: 0
+    keep_alive: true
   - name: "4"
   - name: "5"
   - name: "6"
@@ -216,23 +219,23 @@ keybindings:
 
   # Move focused window in a given direction.
   - commands: ["move --direction left"]
-    bindings: ["alt+shift+h", "alt+shift+left"]
+    bindings: ["alt+shift+left"]
   - commands: ["move --direction right"]
-    bindings: ["alt+shift+l", "alt+shift+right"]
+    bindings: ["alt+shift+right"]
   - commands: ["move --direction up"]
-    bindings: ["alt+shift+k", "alt+shift+up"]
+    bindings: ["alt+shift+up"]
   - commands: ["move --direction down"]
-    bindings: ["alt+shift+j", "alt+shift+down"]
+    bindings: ["alt+shift+down"]
 
   # Resize focused window by a percentage or pixel amount.
   - commands: ["resize --width -2%"]
-    bindings: ["alt+u"]
+    bindings: ["alt+shift+ctrl+left"]
   - commands: ["resize --width +2%"]
-    bindings: ["alt+p"]
+    bindings: ["alt+shift+ctrl+right"]
   - commands: ["resize --height +2%"]
-    bindings: ["alt+o"]
+    bindings: ["alt+shift+ctrl+up"]
   - commands: ["resize --height -2%"]
-    bindings: ["alt+i"]
+    bindings: ["alt+shift+ctrl+down"]
 
   # Disables all keybindings until alt+shift+p is pressed again.
   - commands: ["wm-enable-binding-mode --name pause"]
